--- a/Misfits/assets/css/style.css
+++ b/Misfits/assets/css/style.css
@@ -57,7 +57,21 @@ nav:hover::before {
 }
 
 .logo-cont {
-  width: 15%;
+  width: 20%;
+}
+
+.logo-cont a{
+  text-decoration: none;
+  color: white;
+  font-family: Kabrio soft;
+  font-weight: bold;
+  font-size: 1.5em;
+  z-index: 2;
+}
+
+.logo-cont a:hover{
+  color: red;
+  transition: 1s;
 }
 
 .logo {
@@ -74,6 +88,7 @@ nav ul {
   width: 20%;
   display: flex;
   justify-content: space-around;
+  gap: 20px;
 }
 
 nav ul li {
@@ -89,14 +104,22 @@ nav ul li a {
   z-index: 2;
 }
 
-nav ul li a img {
+nav ul li a  {
   opacity: 0.6;
   width: 30px;
 }
 
-nav ul li a img:hover {
+nav ul li a:hover {
   opacity: 1;
   transition: 0.7s ease-in;
+}
+
+nav ul li button{
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  background:transparent;
+  border: 1px solid white;
 }
 
 /* Navbar end */
